# zeldrix

./: .gitignore  AGENTS.md  CLAUDE.md  SPEC.md  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.tsbuildinfo
scripts/: setup-sidecar.sh
specs/: SPEC-05-WEB-SEARCH-FALLBACK.md  SPEC-06-EDITOR.md  SPEC-ISSUE-04.md  SPEC-ISSUE-09.md  SPEC-ISSUE-10.md  SPEC-ISSUE-11.md  SPEC-ISSUE-12.md  SPEC-ISSUE-13.md  SPEC-ISSUE-14.md  SPEC-ISSUE-15.md  SPEC-ISSUE-16.md  SPEC-ISSUE-17.md  SPEC-ISSUE-18.md  SPEC-ISSUE-19.md  SPEC-ISSUE-20.md  SPEC-ISSUE-21-RETRIEVAL-ENGINE.md  SPEC-ISSUE-22-CONTEXT-INJECTION.md  SPEC-ISSUE-23-CITATIONS-UI.md  SPEC-ISSUE-24-LOCAL-OCR.md  SPEC-ISSUE-25-NETWORK-SYNC.md  (+16 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: document_history.rs  lib.rs  main.rs  table_xlsx_exporter.rs
src-tauri/src/batch_processing/: mod.rs
src-tauri/src/custom_automation_presets/: mod.rs
src-tauri/src/document_ingestion/: chunking.rs  embeddings.rs  mod.rs  sync_service.rs
src-tauri/src/download_manager/: downloader.rs  hasher.rs  hot_swap.rs  mod.rs
src-tauri/src/email_parser/: mod.rs
src-tauri/src/exporter/: mod.rs
src-tauri/src/function_calling/: handler.rs  mod.rs  schema.rs  web_search.rs
src-tauri/src/hardware/: mod.rs
src-tauri/src/merge_engine/: error.rs  merger.rs  mod.rs  parser.rs
src-tauri/src/multimodal/: mod.rs  types.rs
src-tauri/src/retrieval_engine/: mod.rs  prompt_packer.rs
src-tauri/src/sidecar/: health.rs  mod.rs
src-tauri/src/structured_extraction/: mod.rs
src-tauri/src/templates_db/: mod.rs  schema.rs  seed.rs
src-tauri/src/thinking_mode/: mod.rs
src-tauri/src/vector_db/: mod.rs
(+69 files in other folders)
