[package]
name = "zeldrix"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zeldrix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"

# Sidecar management
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
directories = "6"

# Hardware detection
sysinfo = "0.32"

# Download manager
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# Multimodal encoding
base64 = "0.22"

# Templates database
rusqlite = { version = "0.32", features = ["bundled"] }

# Function calling & web search
scraper = "0.21"
regex = "1"
urlencoding = "2"
lazy_static = "1.4"

# Merge engine
thiserror = "1.0"

# Local document ingestion
calamine = "0.24"
pdf-extract = "0.7"
quick-xml = "0.36"
zip = "2"
notify = "6.1.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
